--- a/index.html
+++ b/index.html
@@ -9,10 +9,32 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+        <!-- Font Awesome icons-->
+        <script src="https://kit.fontawesome.com/9547750bbd.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="min-width">
     <header>
+        <div class="logo"></div>
+        <nav class="navigation-bar">
+            <ul>
+                <li class="active">
+                    Blog
+                </li>
+                <li>
+                    Shop
+                </li>
+                <li>
+                    About
+                </li>
+            </ul>
+        </nav>
+        <ul class="social-media-icons">
+            <li><i class="fab fa-facebook-f"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-youtube"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+        </ul>
     </header>
     <main>
         <div id="loading-id" class="animation-wrapper">
@@ -202,7 +224,9 @@
 
     </main>
     <footer>
-
+        <h6>
+            Data from <a class="data-source" href="http://jsonplaceholder.typicode.com/">JSONPlaceholder</a>
+        </h6>
     </footer>
 
 </body>
